# aver

./: .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.yaml  example.env  settings.aver.example.toml  settings.toml
.forgejo/workflows/: audit.yaml  build.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/database/: mod.rs
crates/common/src/http/: mod.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/ocm/: mutation.rs
crates/database/src/users/: mutation.rs  query.rs
crates/drive/src/: main.rs
crates/drive/src/http/: mod.rs
crates/drive/src/http/services/auth/: endpoints.rs  mod.rs  models.rs  router.rs
crates/drive/src/http/services/ocm/: endpoints.rs  methods.rs  mod.rs
crates/drive/src/http/services/root/: router.rs
crates/drive/src/http/services/users/: endpoints.rs  models.rs  router.rs
crates/drive/src/http/services/wellknown/: router.rs
crates/drive/src/models/: mod.rs
crates/drive/src/templates/html/: create-invite-token.html  index.html  login.html
crates/drive/src/utils/: log.rs  mod.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  ocm_contacts.rs  ocm_invite_tokens.rs  ocm_users.rs  organizations.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  user_org_roles.rs  user_organization_roles.rs  users.rs
crates/gnap/: Cargo.toml
crates/gnap/src/: main.rs
crates/gnap/src/errors/: mod.rs
crates/gnap/src/http/: mod.rs
crates/gnap/src/http/services/: mod.rs
crates/gnap/src/http/services/wellknown/: endpoints.rs  methods.rs  mod.rs  models.rs  router.rs
crates/gnap/src/models/: mod.rs
crates/gnap/src/settings/: methods.rs  models.rs
crates/gui/: Cargo.toml  index.html
crates/gui/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m2024_000001_users.rs  m2024_000002_roles.rs  m2024_000003_permissions.rs  m2024_000004_organizations.rs  m2024_000005_role_permissions.rs  m2024_000006_user_org_roles.rs  m2024_000006_user_organization_roles.rs  m2024_000007_ocm_users.rs  m2024_000008_ocm_contacts.rs  m2024_000009_ocm_invite_tokens.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/database/: mod.rs  models.rs
crates/server/src/database/models/: user.rs
crates/server/src/http/: endpoints.rs  methods.rs  mod.rs  models.rs  router.rs
crates/server/src/http/middlewares/auth/: constants.rs  endpoints.rs  methods.rs  mod.rs  models.rs
crates/server/src/http/services/: mod.rs
crates/server/src/http/services/auth/: endpoints.rs  models.rs  router.rs
crates/server/src/http/services/ocm/: endpoints.rs  models.rs  router.rs
crates/server/src/http/services/root/: endpoints.rs
crates/server/src/http/services/users/: endpoints.rs  mod.rs  models.rs  router.rs
crates/server/src/http/utils/: health.rs  panic.rs
crates/server/src/ocm/: constants.rs  endpoints.rs  methods.rs  mod.rs  models.rs  responses.rs  routes.rs
crates/server/src/settings/: methods.rs  mod.rs  models.rs
crates/server/src/templates/: mod.rs
crates/server/src/templates/html/: index.html  login.html  signup.html
crates/server/src/utils/: log.rs
crates/tui/: Cargo.toml
crates/webui/: Cargo.toml  index.html  navbar.html  package-lock.json  sd.html  tailwind.config.js
crates/webui/src/: app.rs  router.rs
crates/webui/src/api/: types.rs  user_api.rs
crates/webui/src/components/: footer.rs  form_input.rs  mod.rs  navbar.rs  submit_button.rs
crates/webui/src/components/navbar/: apps.rs  mod.rs  notifications.rs
crates/webui/src/components/navi/: apps.rs  mod.rs  search.rs  user.rs
crates/webui/src/pages/: home.rs  login.rs  mod.rs  profile_page.rs  register.rs  register_page.rs
crates/wopi/: Cargo.toml
docker/: base.Dockerfile
docs/: brainstorm.md  database setup.md
docs/protocol/: goals.md
docs/specification/: description.md
