[workspace]
resolver = "2"
members = ["crates/*"]

# The settings below will be applied to
# all crates in the workspace
[workspace.package]
# MSRV (minimal supported Rust version).
rust-version = "1.70"
edition = "2021"

license = "AGPL-3.0-only"
homepage = "https://github.com/MahdiBaghbani/aver"
repository = "https://github.com/MahdiBaghbani/aver"
authors = [
    "Mahdi Baghbani <mahdi-baghbani1@azadehafzar.io>"
]
