[package]
name = "aver-common"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "aver_common"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.40"

[dependencies.aver-database]
path = "../database"

[dependencies.aver-database-entity]
path = "../entity"

[dependencies.aver-database-migration]
path = "../migration"

[dependencies.poem]
version = "3.0.4"

[dependencies.serde]
version = "1.0.209"
features = [
    "derive",
]
