[package]
name = "aver-database"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "aver_database"
path = "src/lib.rs"

[dependencies]
aver-database-entity = { path = "../entity" }

[dependencies.sea-orm]
version = "1.0.1"
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
]

[dev-dependencies]

[dev-dependencies.tokio]
version = "1.40.0"
features = [
    "macros",
    "rt",
]
