[package]
name = "aver-gnap"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dotenvy = "0.15.7"
mongodb = "3.0.1"
once_cell = "1.19.0"
redis = "0.26.1"
serde_json = "1.0.127"
thiserror = "1.0.63"
tracing = "0.1.40"

[dependencies.config]
version = "0.14.0"
features = [
    "toml",
]

[dependencies.mimalloc]
version = "0.1.43"
features = [
    "secure"
]

[dependencies.poem]
version = "3.0.4"
features = [
]

[dependencies.serde]
version = "1.0.209"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.39.3"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "env-filter",
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
]
