[package]
name = "aver-gui"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
leptos = { version = "0.7.0-beta2", features = ["csr"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
