[package]
name = "aver-database-migration"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "aver_database_migration"
path = "src/lib.rs"

[dependencies]

[dependencies.async-std]
version = "1.0.1"
features = [
    "attributes",
    "tokio1",
]

# Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
# View the list of supported features at
# https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
[dependencies.sea-orm-migration]
version = "1.0.1"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]