[package]
name = "aver"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4.38"
dav-server = "0.7.0"
dav-server-opendalfs = "0.0.8"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
native_db = "0.7.1"
native_model = "0.4.19"
once_cell = "1.19.0"
opendal = "0.49.1"
poem-grants = "3.0.1"
serde_json = "1.0.125"
tracing = "0.1.40"

[dependencies.config]
version = "0.14.0"
features = [
    "toml",
]

[dependencies.mimalloc]
version = "0.1.43"
features = [
    "secure"
]

[dependencies.poem]
version = "3.0.4"
features = [
]

[dependencies.reqwest]
version = "0.12.7"
features = [
    "json",
    "rustls-tls",
]

[dependencies.serde]
version = "1.0.208"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.39.3"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "env-filter",
]