[package]
name = "aver"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4.38"
dav-server = "0.7.0"
dav-server-opendalfs = "0.1.0"
dotenvy = "0.15.7"
once_cell = "1.19.0"
opendal = "0.49.2"
serde_json = "1.0.127"
tera = "1.20.0"
tracing = "0.1.40"

[dependencies.aver-database]
path = "../database"

[dependencies.aver-database-entity]
path = "../entity"

[dependencies.aver-database-migration]
path = "../migration"

[dependencies.config]
version = "0.14.0"
features = [
    "toml",
]

[dependencies.mimalloc]
version = "0.1.43"
features = [
    "secure"
]

[dependencies.poem]
version = "3.0.4"
features = [
    "redis-session",
]

[dependencies.redis]
version = "0.26.1"
features = [
    "aio",
    "tokio-comp",
    "connection-manager",
]

[dependencies.serde]
version = "1.0.209"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.40.0"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "env-filter",
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
]
