[package]
name = "aver-webui"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo = "0.11.0"
reqwasm = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
validator = { version = "0.18.1", features = ["derive"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["HtmlInputElement","Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
